[gd_scene load_steps=4 format=3 uid="uid://c5ly25280ihff"]

[ext_resource type="Script" path="res://scripts/SettingRow.gd" id="1_fqen2"]
[ext_resource type="Texture2D" uid="uid://bavjg5incae87" path="res://icons/folder.svg" id="2_84nuf"]
[ext_resource type="StyleBox" uid="uid://diaddqcc7f2do" path="res://themes/styles/hseparator_dark.tres" id="3_xpf0l"]

[node name="SettingRow" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fqen2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TagsLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 0.247059)
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
autowrap_mode = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 8

[node name="SelectPathContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="FolderLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectPathContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="SelectFolderButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectPathContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("2_84nuf")
stretch_mode = 3

[node name="SelectMultiplePathsContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectMultiplePathsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectFolderButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectMultiplePathsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("2_84nuf")
stretch_mode = 3

[node name="PathPoolContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="PathsItemList" type="ItemList" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/PathPoolContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectFolderButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/PathPoolContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("2_84nuf")
stretch_mode = 3

[node name="StringsPoolContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StringsItemList" type="ItemList" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/StringsPoolContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3

[node name="StringsPoolLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/StringsPoolContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("3_xpf0l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DirectoryScanFileDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(681, 175)
ok_button_text = "Select Current Folder"
mode_overrides_title = false
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true

[connection signal="toggled" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectPathContainer/FolderLineEdit" to="." method="_on_folder_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectPathContainer/SelectFolderButton" to="." method="_on_select_folder_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/SelectMultiplePathsContainer/SelectFolderButton" to="." method="_on_select_folder_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/PathPoolContainer/PathsItemList" to="." method="_on_paths_item_list_item_activated"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/PathPoolContainer/SelectFolderButton" to="." method="_on_select_folder_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2/HBoxContainer/StringsPoolContainer/StringsItemList" to="." method="_on_paths_item_list_item_activated"]
[connection signal="dir_selected" from="CanvasLayer/DirectoryScanFileDialog" to="." method="_on_directory_scan_file_dialog_dir_selected"]
